<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Topo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_textbox_hint">Add a Task</string>
    <string name="add_button_text">Add</string>
    <string name="primary_button_text">Set</string>
    <string name="clear_button_text">Clear</string>
    <string name="choose_button_text">Choose another</string>
    <string name="complete_button_text">Task completed</string>
    <string name="menu_refresh">Refresh</string>
    <string name="checkbox_text">Task</string>
    <string name="tasks">Tasks</string>
    <string name="primary_tasks">Primary Tasks</string>
    <string name="primary_tasks_description">Tasks currently focussed on</string>
    <string name="secondary_tasks">Secondary Tasks</string>
    <string name="secondary_tasks_description">Tasks to focus on later</string>
    <string name="add_task_button">Add Task Button</string>
    <string name="update_task">Update Task</string>
    <string name="title_activity_new_task">NewTaskActivity</string>
    <string name="empty">(Empty)</string>
    <string name="make_primary">Make Primary</string>
    <string name="red_primary_task">Red Primary Task</string>
    <string name="green_primary_task">Green Primary Task</string>
    <string name="blue_primary_task">Blue Primary Task</string>
    <string name="description">Description</string>
    <string name="title_activity_add_task">Add Task</string>
    <string name="title_activity_update_task">Update Task</string>
    <string name="task_description_placeholder">Task description</string>
    <string name="add_parents_text">Add Parents</string>
    <string name="update_parents_text">Update Parents</string>
    <string name="cancel">Cancel</string>
    <string name="save_task">Save Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="title_activity_completed_tasks">Completed Tasks</string>
    <string name="completed">Completed ?</string>

</resources>
