<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutNewTask"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp">

    <EditText 
        android:id="@+id/updateTaskEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/task_description_placeholder"/>
    
    
    <TextView
            android:id="@+id/updateParentTasksTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_parents_text"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
     
     <ListView
       android:id="@android:id/list"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       tools:listitem="@layout/row_list_task_with_checkbox" 
       android:layout_marginTop="8dp" 
       android:layout_marginLeft="8dp"/>
    
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:baselineAligned="false">
         
         <LinearLayout 
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_weight="1">
	         <Button 
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:onClick="onSaveTaskClick"
	             android:text="@string/save_task"/>
         </LinearLayout>
         
         <LinearLayout 
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_weight="1">
	         <Button 
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:onClick="onDeleteTaskClick"
	             android:text="@string/delete_task"/>
         </LinearLayout>
         
         
     </LinearLayout>
    
</LinearLayout>
     