<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutNewTask"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CCCCCC">
        
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical">
        
	    <EditText 
	        android:id="@+id/newTaskEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/task_description_placeholder"/>
    </LinearLayout>
    
    <TextView
        android:id="@+id/addParentTasksTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_parents_text"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical">
           
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:orientation="vertical">
	        
		     <ListView
		       android:id="@android:id/list"
		       android:layout_width="match_parent"
		       android:layout_height="wrap_content"
		       tools:listitem="@layout/row_list_task_with_checkbox" 
		       android:layout_marginTop="8dp" 
		       android:layout_marginLeft="8dp"/>
		     
	    </LinearLayout>
	     <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="48dp"
	        android:layout_alignParentBottom="true">
            
	        <View
	            android:layout_width="match_parent"
	            android:layout_height="1dip"
	            android:layout_marginLeft="4dip"
	            android:layout_marginRight="4dip"
	            android:background="?android:attr/dividerVertical"
	            android:layout_alignParentTop="true"/>
	         
	        <View
	            android:id="@+id/addTaskPickerHelper"
	            android:layout_width="1dip"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
	            android:layout_alignParentBottom="true"
	            android:layout_marginBottom="4dip"
	            android:layout_marginTop="4dip"
	            android:background="?android:attr/dividerVertical" 
	            android:layout_centerHorizontal="true"/>
	        
	        <Button
	            android:id="@+id/add_task_button"
	            android:text="@string/add_task"
	            android:onClick="onAddTaskClick"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentTop="true"
	            android:layout_toLeftOf="@id/addTaskPickerHelper"
	            android:background="?android:attr/selectableItemBackground"
	            android:layout_alignParentBottom="true" />
	        
	        <Button
	            android:id="@+id/cancel_button"
	            android:text="@string/cancel"
	            android:onClick="onCancelAddTaskClick"
	            android:layout_toRightOf="@id/addTaskPickerHelper"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_alignParentRight="true"
	            android:layout_alignParentTop="true"
	            android:background="?android:attr/selectableItemBackground" 
	            android:layout_alignParentBottom="true" />
	        
	    </RelativeLayout>
    </LinearLayout>
</LinearLayout>
     