<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp">
    
     <TextView
            android:id="@+id/primaryTasksTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primary_tasks"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
     
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp">
       
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_marginLeft="8dp">
            
            <LinearLayout 
                android:id="@+id/redPrimaryLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                
                <ImageView 
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@color/android_light_red"
                    android:contentDescription="@string/description" />         
                    
                <Spinner 
		            android:id="@+id/red_primary_task_spinner"
		            android:layout_width="0dp"
		            android:layout_weight="1"
		            android:layout_height="24dp"
		            android:layout_marginLeft="8dp"
		            android:prompt="@string/empty"
		            android:textAppearance="?android:attr/textAppearanceMedium"/>
            </LinearLayout>
            
             <LinearLayout 
                android:id="@+id/greenPrimaryLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                
                <ImageView 
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@color/android_light_green"
                    android:contentDescription="@string/description" />         
                    
                <Spinner 
		            android:id="@+id/green_primary_task_spinner"
		            android:layout_width="0dp"
		            android:layout_weight="1"
		            android:layout_height="24dp"
		            android:layout_marginLeft="8dp"
		            android:prompt="@string/empty"
		            android:textAppearance="?android:attr/textAppearanceMedium"/>
            </LinearLayout>
            
             <LinearLayout 
               android:id="@+id/bluePrimaryLayout"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1">
               
               <ImageView 
                   android:layout_width="24dp"
                   android:layout_height="24dp"
                   android:background="@color/android_light_blue"
                   android:contentDescription="@string/description" />     
               
               <Spinner 
		            android:id="@+id/blue_primary_task_spinner"
		            android:layout_width="0dp"
		            android:layout_weight="1"
		            android:layout_height="24dp"
		            android:layout_marginLeft="8dp"
		            android:prompt="@string/empty"
		            android:textAppearance="?android:attr/textAppearanceMedium"/>
               
           	</LinearLayout>
         </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        >

        <TextView
            android:id="@+id/incompleteTasksTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/incomplete_tasks"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>


    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/row_list_to_do" 
        android:layout_marginTop="8dp" 
        android:layout_marginLeft="8dp"/>


</LinearLayout>