<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp">
    
     <TextView
	     android:id="@+id/primaryTasksTitle"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:text="@string/primary_tasks"
	     android:layout_marginTop="10dp"
	     android:layout_marginLeft="8dp"
	     android:textAppearance="?android:attr/textAppearanceLarge" />
     
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:baselineAligned="false"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp">
            
           <LinearLayout 
               android:id="@+id/redPrimaryLayout"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1">
               
               <ImageView 
                   android:layout_width="16dp"
                   android:layout_height="16dp"
                   android:background="@color/android_light_red"
                   android:layout_gravity="center_vertical"
                   android:contentDescription="@string/description" />         
                   
                <TextView
                   android:id="@+id/red_primary_task_selected_id"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="8dp"
                   android:textAppearance="?android:attr/textAppearanceMedium" />
                
               <TextView
	             android:id="@+id/red_primary_task_selected_text"
	             android:layout_width="0dp"
	             android:layout_height="wrap_content"
	             android:layout_weight="1"
	             android:hint="@string/empty"
	             android:layout_marginLeft="8dp"
	             android:textAppearance="?android:attr/textAppearanceMedium" />
                   
           </LinearLayout>
           
            <LinearLayout 
               android:id="@+id/greenPrimaryLayout"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1">
               
               <ImageView 
                   android:layout_width="16dp"
                   android:layout_height="16dp"
                   android:layout_gravity="center_vertical"
                   android:background="@color/android_light_green"
                   android:contentDescription="@string/description" />         
                   
                <TextView
                   android:id="@+id/green_primary_task_selected_id"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="8dp"
                   android:textAppearance="?android:attr/textAppearanceMedium" />
                
               <TextView
	             android:id="@+id/green_primary_task_selected_text"
	             android:layout_width="0dp"
	             android:layout_height="wrap_content"
	             android:layout_weight="1"
	             android:layout_marginLeft="8dp"
	             android:hint="@string/empty"
	             android:textAppearance="?android:attr/textAppearanceMedium" />
           </LinearLayout>
           
           <LinearLayout 
             android:id="@+id/bluePrimaryLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1">
             
             <ImageView 
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:layout_gravity="center_vertical"
                 android:background="@color/android_light_blue"
                 android:contentDescription="@string/description" />
             
              <TextView
                   android:id="@+id/blue_primary_task_selected_id"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="8dp"
                   android:textAppearance="?android:attr/textAppearanceMedium" />
             
               <TextView
	             android:id="@+id/blue_primary_task_selected_text"
	             android:layout_width="0dp"
	             android:layout_height="wrap_content"
	             android:layout_weight="1"
	             android:layout_marginLeft="8dp"
	             android:hint="@string/empty"
	             android:textAppearance="?android:attr/textAppearanceMedium" />
          	</LinearLayout>
          	
	</LinearLayout>
	
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         
         <Spinner 
	            android:id="@+id/red_primary_task_spinner"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="8dp"
	            android:prompt="@string/empty"
	            android:textAppearance="?android:attr/textAppearanceMedium"/>
         
         <Spinner 
	            android:id="@+id/green_primary_task_spinner"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="8dp"
	            android:prompt="@string/empty"
	            android:textAppearance="?android:attr/textAppearanceMedium"/>
         
         <Spinner 
	            android:id="@+id/blue_primary_task_spinner"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="8dp"
	            android:prompt="@string/empty"
	            android:textAppearance="?android:attr/textAppearanceMedium"/>
         
     </LinearLayout>
     
     
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         
         <Button 
	            android:id="@+id/red_primary_task_button"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="8dp"
	            android:text="@string/add_button_text"
	            android:onClick="makeTaskRedPrimary"
	            android:textAppearance="?android:attr/textAppearanceMedium"/>
         
         <Button 
	            android:id="@+id/red_clear_button"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="8dp"
	            android:text="@string/clear_button_text"
	            android:onClick="clearRed"
	            android:textAppearance="?android:attr/textAppearanceMedium"/>
         
         <Button 
	            android:id="@+id/green_primary_task_button"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="8dp"
	            android:text="@string/add_button_text"
	            android:onClick="makeTaskGreenPrimary"
	            android:textAppearance="?android:attr/textAppearanceMedium"/>
         
         <Button 
	            android:id="@+id/green_clear_button"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="8dp"
	            android:text="@string/clear_button_text"
	            android:onClick="clearGreen"
	            android:textAppearance="?android:attr/textAppearanceMedium"/>
         
         <Button 
	            android:id="@+id/blue_primary_task_button"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="8dp"
	            android:text="@string/add_button_text"
	            android:onClick="makeTaskBluePrimary"
	            android:textAppearance="?android:attr/textAppearanceMedium"/>
         
         <Button 
	            android:id="@+id/blue_clear_button"
	            android:layout_width="0dp"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="8dp"
	            android:text="@string/clear_button_text"
	            android:onClick="clearBlue"
	            android:textAppearance="?android:attr/textAppearanceMedium"/>
         
     </LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        >

        <TextView
            android:id="@+id/incompleteTasksTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/incomplete_tasks"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>


    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/row_list_to_do" 
        android:layout_marginTop="8dp" 
        android:layout_marginLeft="8dp"/>


</LinearLayout>